test/parser/types/ptr_to_borrowing_param.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s
// CHECK: [[# @LINE + 1 ]]:13: error: expected type specifier
fn test(x: *borrowed number) {}

// CHECK: [[# @LINE + 1 ]]:15: error: expected type specifier
fn test(x: ***borrowed number) {}

fn main() {}
